--- a/openh264.pc.in
+++ b/openh264.pc.in
@@ -1,8 +1,8 @@
 prefix=@prefix@
-libdir=${prefix}/lib
+libdir=@libdir@
 includedir=${prefix}/include
 
-Name: NoOpenH264
+Name: OpenH264
 Description: Dummy implementation of the OpenH264 library from Cisco.
 Version: @VERSION@
 Libs: -L${libdir} -lopenh264 @LIBS@
